bad/assign_var_bool_void.example_compiler_output
ERROR
[1mbad/assign_var_bool_void.lat:6:4: [1;31merror: [0;1massigning to `boolean` from incompatible type `void`[m
	x = vfunc();
	  [1;32m^[m
